base/src/test/resources/failure/syntax/literal-too-large.aya.txt
In file $FILE:3:17 ->

  1 |   open data Nat | zero | suc Nat
  2 |   
  3 |   def too-large => 2147483648
    |                    ^--------^

Error: Parser error: Unsupported integer literal `2147483648`

Parsing interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
